refactor: add order (#37)
* refactor: add order

* fix: update order business logic

* refactor: refine order / transaction / balance events

* fix: fix profitable_price calculation

* feat: support Order list query

* fix: refine struct memory allocation
