# api/jarvis.v1.swagger.json
@@ -104,6 +104,90 @@
         ]
       }
     },
+    "/v1/orders": {
+      "post": {
+        "operationId": "JarvisV1_CreateOrder",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CreateOrderResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1CreateOrderRequest"
+            }
+          }
+        ],
+        "tags": [
+          "JarvisV1"
+        ]
+      }
+    },
+    "/v1/orders/{userID}": {
+      "post": {
+        "operationId": "JarvisV1_ListOrders",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ListOrderResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "userID",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "offset": {
+                  "type": "integer",
+                  "format": "int32"
+                },
+                "limit": {
+                  "type": "integer",
+                  "format": "int32"
+                },
+                "searchParams": {
+                  "$ref": "#/definitions/v1ListOrderSearchParams"
+                }
+              }
+            }
+          }
+        ],
+        "tags": [
+          "JarvisV1"
+        ]
+      }
+    },
     "/v1/pickedstocks": {
       "get": {
         "operationId": "JarvisV1_ListPickedStocks",
@@ -493,17 +577,17 @@
         }
       }
     },
-    "v1CreateTransactionRequest": {
+    "v1CreateOrderRequest": {
       "type": "object",
       "properties": {
         "userID": {
           "type": "string",
           "format": "uint64"
         },
-        "stockID": {
+        "orderType": {
           "type": "string"
         },
-        "exchangeDate": {
+        "stockID": {
           "type": "string"
         },
         "tradePrice": {
@@ -514,15 +598,42 @@
           "type": "string",
           "format": "uint64"
         },
+        "exchangeDate": {
+          "type": "string"
+        }
+      }
+    },
+    "v1CreateOrderResponse": {
+      "type": "object",
+      "properties": {
+        "success": {
+          "type": "boolean"
+        },
+        "status": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "errorMessage": {
+          "type": "string"
+        },
+        "errorCode": {
+          "type": "string"
+        }
+      }
+    },
+    "v1CreateTransactionRequest": {
+      "type": "object",
+      "properties": {
+        "userID": {
+          "type": "string",
+          "format": "uint64"
+        },
         "orderType": {
           "type": "string"
         },
-        "description": {
-          "type": "string"
-        },
-        "referenceID": {
-          "type": "string",
-          "format": "uint64"
+        "amount": {
+          "type": "number",
+          "format": "float"
         }
       }
     },
@@ -776,6 +887,46 @@
         }
       }
     },
+    "v1ListOrderResponse": {
+      "type": "object",
+      "properties": {
+        "offset": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "limit": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "totalCount": {
+          "type": "string",
+          "format": "int64"
+        },
+        "entries": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1Order"
+          }
+        }
+      }
+    },
+    "v1ListOrderSearchParams": {
+      "type": "object",
+      "properties": {
+        "stockIDs": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "exchangeMonth": {
+          "type": "string"
+        },
+        "status": {
+          "type": "string"
+        }
+      }
+    },
     "v1ListPickedStocksResponse": {
       "type": "object",
       "properties": {
@@ -941,6 +1092,59 @@
           "items": {
             "$ref": "#/definitions/v1User"
           }
+        }
+      }
+    },
+    "v1Order": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "updatedAt": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "status": {
+          "type": "string"
+        },
+        "userID": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "stockID": {
+          "type": "string"
+        },
+        "buyPrice": {
+          "type": "number",
+          "format": "float"
+        },
+        "sellPrice": {
+          "type": "number",
+          "format": "float"
+        },
+        "buyQuantity": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "sellQuantity": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "buyExchangeDate": {
+          "type": "string"
+        },
+        "sellExchangeDate": {
+          "type": "string"
+        },
+        "profitablePrice": {
+          "type": "number",
+          "format": "float"
         }
       }
     },
