# internal/app/dto/dto.go
@@ -170,15 +170,9 @@ type GetBalanceViewResponse struct {
 }
 
 type CreateTransactionRequest struct {
-	UserID               uint64  `json:"userID"`
-	StockID              string  `json:"stockID"`
-	OrderType            string  `json:"orderType"`
-	TradePrice           float32 `json:"tradePrice"`
-	Quantity             uint64  `json:"quantity"`
-	ExchangeDate         string  `json:"exchangeDate"`
-	Description          string  `json:"description,omitempty"`
-	ReferenceID          *uint64 `json:"referenceId,omitempty"`
-	OriginalExchangeDate string  `json:"originalExchangeDate,omitempty"`
+	OrderType string  `json:"orderType"`
+	Amount    float32 `json:"amount"`
+	UserID    uint64  `json:"userID"`
 }
 
 type CreateTransactionResponse struct {
@@ -186,4 +180,40 @@ type CreateTransactionResponse struct {
 	ErrorMessage string `json:"errorMessage"`
 	Success      bool   `json:"success"`
 	Status       int    `json:"status"`
+}
+
+type CreateOrderRequest struct {
+	OrderType    string  `json:"orderType"`
+	StockID      string  `json:"stockID"`
+	ExchangeDate string  `json:"exchangeDate"`
+	TradePrice   float32 `json:"tradePrice"`
+	Quantity     uint64  `json:"quantity"`
+	UserID       uint64  `json:"userID"`
+}
+
+type CreateOrderResponse struct {
+	ErrorCode    string `json:"errorCode"`
+	ErrorMessage string `json:"errorMessage"`
+	Success      bool   `json:"success"`
+	Status       int    `json:"status"`
+}
+
+type ListOrderSearchParams struct {
+	StockIDs      *[]string `json:"stockIDs,omitempty"`
+	ExchangeMonth *string   `json:"exchangeMonth,omitempty"`
+	Status        *string   `json:"status,omitempty"`
+	UserID        uint64    `json:"userID"`
+}
+
+type ListOrderRequest struct {
+	SearchParams *ListOrderSearchParams `json:"searchParams"`
+	Offset       int32                  `json:"offset"`
+	Limit        int32                  `json:"limit"`
+}
+
+type ListOrderResponse struct {
+	Entries    []*entity.Order `json:"entries"`
+	Offset     int32           `json:"offset"`
+	Limit      int32           `json:"limit"`
+	TotalCount int64           `json:"totalCount"`
 }
