# internal/app/entity/transaction_event.go
@@ -6,11 +6,7 @@ type TransactionCreated struct {
 	DebitAmount  float32
 	CreditAmount float32
 	OrderType    string
-	StockID      string
-	ExchangeDate string
-	TradePrice   float32
-	Quantity     uint64
-	Description  string
+	OrderID      uint64
 
 	eventsourcing.BaseEvent
 }
